syntax = "proto3";
package proto;

service BenchmarkWorker {
    rpc StartWorker(WorkerConfiguration) returns (stream ResultPackage) {}
}

message WorkerConfiguration {
    string workerId = 1;
    int64 runtimeSeconds = 2;
    int64 targetThroughput = 3;
    string environmentId = 4;
    repeated SpanModel spanSequence = 5;
}

message SpanModel {
    string operationName = 1;
    CallType callType = 2;
    int64 delay = 3;
    repeated Tag tags = 4;
}

message Tag {
    string key = 1;
    string value = 2;
}

message Result {
    string operationName = 1;
    int64 spanId = 2;
    int64 latency = 3;
}

message ResultPackage {
    string workerId = 1;
    string environmentId = 2;
    repeated Result results = 3;
}

enum CallType {
    SYNC = 0;
    ASYNC = 1;
}